ScoreRow follows conventions and LevelHighScoreTable minor fix for multiple score from same player